[package]
name = "deno-matrix-element-bot"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/deno/tree/main/demos/deno-fresh-rss-feed/deno-matrix-element-bot"
description = "Matrix Element bot WASM Rust code"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }
matrix-sdk = { version = "0.11.0", default-features = false, features = ["e2e-encryption", "js", "native-tls"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
