[package]
name = "rs_lib"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/deno"
description = "Basic image processing"

[lib]
crate-type = ["cdylib"]

[dependencies]
photon-rs = "0.3.3"
wasm-bindgen = "0.2.100"
